2008-09-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Add a menu to set a focus policy for all
	frames.

	* src/clfswm-util.lisp (set-focus-policy-generic-for-all)
	(all-frames-set-*-focus-policy): Set a focus policy for all
	frames.

	* src/clfswm.lisp (handle-enter-notify): sloppy-select
	mode. Select a child and its parents on mouse over.

2008-09-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (handle-enter-notify): Add a sloppy strict focus
	policy -> Sloppy focus only for windows in the current frame.
	(main-unprotected): Exit clfswm on init error (ie: when another
	window manager is running).

	* src/clfswm-util.lisp (reset-clfswm): New function.

2008-09-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (init-menu): New function.

	* src/clfswm-util.lisp (reload-clfswm): New function to reload
	CLFSWM.
	(exit-clfswm): Rename quit-clfswm to exit-clfswm.

	* src/clfswm.lisp (main, main-unprotected): Handle error in a
	superior main function. Now CLFSWM can't break the X session. It
	just reinitialize the display and run a new main loop.

	* src/clfswm-corner.lisp: Make *clfswm-terminal* and
	*vt-keyboard-on* global to avoid warnings when loading clfswm.

	* src/clfswm-layout.lisp: Add a specific GIMP layout menu.
	(help-on-gimp-layout): Describe how to use the GIMP layout.

2008-09-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-gimp-layout): Change the layout to
	main-window-right-layout. Change the keybinding for (shift)alt+tab
	to not select windows in the main window lisst.
	Bind F8 to add a window in the main window list.
	Bind F9 to remove a window in the main window list.
	Change the focus policy to :sloppy.
	(set-previous-layout): Restore the previous layout, keybinding and
	focus policy.

2008-08-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (add-menu-comment): Add comments in menu.
