@@ -54,7 +54,7 @@
 (add-sub-menu 'main "n" 'action-by-name-menu "Action by name menu")
 (add-sub-menu 'main "u" 'action-by-number-menu "Action by number menu")
 (add-sub-menu 'main "y" 'utility-menu "Utility menu")
-(add-sub-menu 'main #\* 'clfswm-menu "CLFSWM menu")
+(add-sub-menu 'main "m" 'clfswm-menu "CLFSWM menu")
 
 
 
